--- a/npkpir_23/web/ksiegowa/ksiegowaZmianapodatnika.xhtml
+++ b/npkpir_23/web/ksiegowa/ksiegowaZmianapodatnika.xhtml
@@ -18,7 +18,7 @@
                         <ui:include src="sub/layoutZmianapodatnika/west.xhtml"/>   <!-- panel zachodni-->
                         <ui:include src="sub/layoutTablica/east.xhtml"/>   <!-- panel wchodni-->
                         <pe:layoutPane position="center">
-                               <ui:include src="sub/zmianapodatnika.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
+                               <ui:include src="./sub/zmianapodatnika.xhtml"/>   <!-- właściwa tablica z danymi z księgi-->
                         </pe:layoutPane>
 
                     </pe:layout>
