--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
@@ -8,8 +8,10 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <pe:layoutPane position="south" size="50" closable="true">
-                <h:outputText value="Podatkowa księga przychodów i rozchodów online. Wszelkie prawa zastrzeżone. Szczecin 2012"/>
+    <pe:layoutPane position="south" size="50" closable="true" styleClassContent="southpane">
+        <h:form id="form_southpane" class="form_southpane">
+            <h:outputText value="#{WpisView.podatnikObiekt.printnazwa}" style="font-weight: 900; font-size: xx-large"/>
+        </h:form>
     </pe:layoutPane>
     
 </ui:composition>   
