--- a/npkpir_23/web/wspolny/sub/vatwyslane_bledne.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatwyslane_bledne.xhtml
@@ -7,7 +7,8 @@
     xmlns:ft="http://primefaces.prime.com.tr/facestrace"
     xmlns:c="http://java.sun.com/jsp/jstl/core">
     <p:tab title="błędne">
-        <p:dataTable lazy="false"  id="dataList1" value="#{deklaracjevatView.wyslanezbledem}" var="item" sortBy="#{item.miesiac}"  emptyMessage="brak wysłanych deklaracji">
+        <p:dataTable lazy="false"  id="dataList1" value="#{deklaracjevatView.wyslanezbledem}" var="item" sortBy="#{item.miesiac}"  emptyMessage="brak wysłanych deklaracji"
+                      rowKey="#{item.id}">
             <p:column style="width: 2%;">
                 <p:rowToggler/>
             </p:column>
