--- a/npkpir_23/web/wspolny/sub/vatwyslane_testowo.xhtml
+++ b/npkpir_23/web/wspolny/sub/vatwyslane_testowo.xhtml
@@ -8,7 +8,8 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core"
     xmlns:bcf="http://brzaskun.com/facelets" xmlns:pe="http://primefaces.org/ui/extensions">
     <p:tab title="testowo   ">
-        <p:dataTable lazy="false"  id="dataList2" value="#{deklaracjevatView.wyslanetestowe}" var="item" sortBy="#{item.miesiac}" rowIndexVar="row"  emptyMessage="brak wysłanych deklaracji">
+        <p:dataTable lazy="false"  id="dataList2" value="#{deklaracjevatView.wyslanetestowe}" var="item" sortBy="#{item.miesiac}" rowIndexVar="row"  emptyMessage="brak wysłanych deklaracji"
+                      rowKey="#{item.id}">
             <p:column style="width: 2%;">
                 <p:rowToggler />
             </p:column>
