--- a/npkpir_23/web/ksiegowa/sub/zestawienieRok.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zestawienieRok.xhtml
@@ -27,7 +27,7 @@
         </h:form>
     <p:tabView id="akordeon" style="width: 1500px;" rendered="#{WpisView.biuroiszef eq true}">
         <ui:include src="zestawienieRok_dane.xhtml" />
-            <ui:include src="zestawienieRok_wykres.xhtml" rendered="#{WpisView.ksiegaryczalt}"/>
+<!--            <ui:include src="zestawienieRok_wykres.xhtml" rendered="#{WpisView.ksiegaryczalt}"/>-->
             <ui:include src="zestawienieRok_cechy.xhtml" rendered="#{WpisView.ksiegaryczalt}"/>
     </p:tabView>
 
