--- a/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokumentyzaksiegowane.xhtml
@@ -189,7 +189,7 @@
                 <p:column id="rodzTrColumn"  filterBy="#{wpis.rodzajedok}" filterStyle="display : none;" filterMatchMode="contains" 
                           sortBy="#{wpis.rodzajedok}"  style="width: 5%;text-align: center;">
                     <f:facet name="filter">
-                        <p:selectOneMenu style="width: 30px;" autoWidth="false" converter="#{rodzajedokConv}" filter="true" filterMatchMode="contains">
+                        <p:selectOneMenu onchange="PF('dokTable').filter()" style="width: 30px;" autoWidth="false" converter="#{rodzajedokConv}" filter="true" filterMatchMode="contains">
                             <f:selectItem itemLabel="dok" itemValue="#{null}" noSelectionOption="true"/>
                             <f:selectItems value="#{DokTabView.dokumentypodatnika}" var="ixi" itemLabel="#{ixi.skrotNazwyDok}" itemValue="#{ixi}"/>
                         </p:selectOneMenu>
