--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
@@ -10,7 +10,10 @@
 
     <pe:layoutPane position="south" size="50" closable="true" styleClassContent="southpane">
         <h:form id="form_southpane" class="form_southpane">
-            <h:outputText value="#{WpisView.podatnikObiekt.printnazwa}" style="font-weight: 900; font-size: xx-large"/>
+            <p:panelGrid columns="2">
+                <h:outputText value="#{WpisView.podatnikObiekt.printnazwa}" style="font-weight: 900; font-size: xx-large"/>
+                <h:outputText value="#{WpisView.okreswpisuString}" style="font-weight: 900; font-size: xx-large; margin-left:20px;"/>
+            </p:panelGrid>
         </h:form>
     </pe:layoutPane>
     
