--- a/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/zmianapodatnika.xhtml
@@ -10,10 +10,9 @@
     <h:form id="form">
         <p:focus for="form:podatnikWpisu"/>
         <p:panel menuTitle="Zmien na:" header="Zmień na:" style="max-width: 800px; height: 290px;">
-            <p:panelGrid columns="4" style="margin-left: 0%; height: 100px;">
+            <p:panelGrid columns="3" style="margin-left: 0%; height: 100px;">
                 <h:outputLabel value="#{mgs['nazwa.podatnika']}"/>
-                <h:outputLabel value="#{mgs.rok}"/>
-                <h:outputLabel value="#{mgs.mc}"/>
+                <h:outputLabel value="okres"/>
                 <h:outputLabel value=""/>
                 <p:selectOneListbox id="podatnikWpisu" value="#{WpisView.podatnikObiekt}" style="width: 350px; height: 250px;" 
                                     converter="#{podatConv}" filter="true" filterMatchMode="contains">
@@ -21,7 +20,12 @@
                     <p:ajax event="change" partialSubmit="true"  listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury form @(.form_southpane)" global="fasle"/>
                     <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista" global="fasle"/>
                 </p:selectOneListbox>
-                <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}">
+                <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
+                        <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
+                        <p:ajax event="change" listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury"  global="false"/>
+                        <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista @(.form_southpane)" global="fasle"/>
+                </p:selectOneMenu>
+<!--                <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}">
                     <f:selectItems value="#{roki.rokiList}"/>
                     <p:ajax event="change" listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury"  global="fasle"/>
                     <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista" global="fasle"/>
@@ -30,7 +34,7 @@
                     <f:selectItems value="#{mce.mceList}"/>
                     <p:ajax event="change" listener="#{DokTabView.aktualizujTabele}" update=":westKsiegowa form:panellimity form:wiadnr1 form:wiadomoscfaktury" global="fasle"/>
                     <p:ajax event="change" partialSubmit="true"  listener="#{rozrachunkiKlientTaxmanView.pobierzwszystkoKlienta()}" update="form:dokumentyLista" global="fasle"/>
-                </p:selectOneMenu>
+                </p:selectOneMenu>-->
                 
             </p:panelGrid>
         </p:panel>
