--- a/npkpir_23/web/sub/wyborpodatnika.xhtml
+++ b/npkpir_23/web/sub/wyborpodatnika.xhtml
@@ -25,21 +25,16 @@
                     </p:selectOneListbox>
                 </p:column>
             </p:panelGrid>
-            <p:panelGrid columns="3"   style="float: right;">
+            <p:panelGrid columns="2"   style="float: right;">
                 <p:column>
-                    <p:selectOneMenu id="rokWpisu" value="#{WpisView.rokWpisu}">
-                        <f:selectItems value="#{roki.rokiList}"/>
-                    </p:selectOneMenu>
-                </p:column>
-                <p:column>
-                    <p:selectOneMenu id="miesiacWpisu" value="#{WpisView.miesiacWpisu}">
-                        <f:selectItems value="#{mce.mceListOdKonca}"/>
+                     <p:selectOneMenu id="okresWpisu" value="#{WpisView.okreswpisu}"  style="width: 100px;" converter="#{okresConverter}">
+                        <f:selectItems value="#{okresBean.okresylista}" var="ytem" itemLabel="#{ytem.rok}-#{ytem.mc}" itemValue="${ytem}"/>
                     </p:selectOneMenu>
                 </p:column>
                 <p:column>
                     <p:commandButton  action="#{WpisView.wrocupr()}"  ajax="false"
                                       style="width: 150px;" id="okbutton"
-                                      actionListener="#{WpisView.wpisAktualizuj()}" value="#{mgs.wybierzmcrok}"/>
+                                      actionListener="#{WpisView.naniesDaneDoWpisOkres()}" value="#{mgs.wybierzmcrok}"/>
                 </p:column>
                 <p:defaultCommand target="okbutton" />
             </p:panelGrid>
