naprawa problemu kropki usuniecie decimal

--- a/npkpir_23/web/admin/sub/podatnicy.xhtml
+++ b/npkpir_23/web/admin/sub/podatnicy.xhtml
@@ -63,12 +63,12 @@
                 <bcf:outputpl0 value="#{it.wierszefk}"/>
             </p:column>
             <p:column headerText="wynagrodzenie" width="90">
-                <p:inputNumber value="#{it.wynagrodzenieobecne}" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" style="width: 90px;" size="12">
+                <p:inputNumber value="#{it.wynagrodzenieobecne}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" style="width: 90px;" size="12">
                     <p:ajax event="change" listener="#{podatnikKsiegowaView.przeliczdane(it)}" partialSubmit="true" update="@parent:@parent" global="false"/>
                 </p:inputNumber>
             </p:column>
             <p:column headerText="proc." width="40">
-                <p:inputNumber value="#{it.procent}" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" maxValue="99.9" size="5" maxlength="4">
+                <p:inputNumber value="#{it.procent}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" maxValue="99.9" size="5" maxlength="4">
                     <p:ajax event="change" listener="#{podatnikKsiegowaView.przeliczdaneproc(it)}" partialSubmit="true" update="@parent:@parent" global="false"/>
                 </p:inputNumber>
             </p:column>
