--- a/npkpir_23/web/wspolny/sub/fakturaraportkasowy/raport.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturaraportkasowy/raport.xhtml
@@ -92,7 +92,7 @@
                     </p:column>
                     <p:column>
                         <p:inputNumber value="#{fakturaRaportKasowyView.selected.kwotapln}" symbol=" zł" required="true" 
-                                       requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."  
+                                       requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"   
                                        inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <p:column>
@@ -124,7 +124,7 @@
                     </p:column>
                     <!--                    <p:column>
                                             <p:inputNumber value="#{fakturaRaportKasowyView.selected.kurs}" symbol=" zł" required="true" 
-                                                            requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."  
+                                                            requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"   
                                                              inputStyle="text-align: right;" decimalPlaces="4" minValue="-10000000" styleClass="wiersznetto"/> 
                                         </p:column>-->
                     <p:column>
@@ -132,7 +132,7 @@
                     </p:column>
                      <p:column>
                          <p:inputNumber value="#{fakturaRaportKasowyView.selected.przeniesienie}" symbol=" zł" required="true" 
-                                       requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."  
+                                       requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"   
                                        inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                 </p:row>
