--- a/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/dokument_wpis.xhtml
@@ -234,7 +234,7 @@
                     <p:column headerText="#{DokumentView.nieVatowiec ? 'kwota' : 'kwota netto*'}"  width="105">
                         <p:inputNumber id="kwotaPkpir" value="#{row.netto}" symbol="#{DokumentView.symbolWalutyNettoVat}" required="true" 
                                        requiredMessage="Brak kwoty - uzupełnij"  inputStyle="text-align: right;"
-                                       symbolPosition="s" decimalSeparator="."  thousandSeparator="&#160;"  decimalPlaces="2" minValue="-10000000" 
+                                       symbolPosition="s" thousandSeparator="&#160;"  decimalPlaces="2" minValue="-10000000" 
                                         styleClass="wiersznetto" onfocus="kalkulator_pobierzwiersz(this);dolaczwyliczenieKopiowanie(event);"
                                         > 
                             <p:ajax event="blur" listener="#{DokumentView.podepnijEwidencjeVat}" global="false"
@@ -245,7 +245,7 @@
                     <p:column headerText="kwota w walucie"  width="105" rendered="#{DokumentView.selDokument.tabelanbp.waluta.symbolwaluty ne 'PLN'}">
                         <p:inputNumber id="kwotaPkpir1" value="#{row.nettowaluta}" symbol=" #{DokumentView.selDokument.tabelanbp.waluta.skrotsymbolu}" required="true" 
                                         requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" 
-                                        symbolPosition="s" decimalSeparator="."  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
+                                        symbolPosition="s"   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" 
                                         styleClass="wiersznetto" thousandSeparator="&#160;" >
                             <p:ajax event="blur" listener="#{DokumentView.przewalutuj(index)}" global="false" partialSubmit="true"
                                     update="dodWiad:sumbrutto"/>
@@ -306,7 +306,7 @@
                         </p:column>
                         <p:column headerText="wartość dokumentu">
                             <p:inputNumber id="sumbrutto" value="#{DokumentView.sumbrutto}" symbol=" #{DokumentView.selDokument.walutadokumentu.skrotsymbolu}" required="true" requiredMessage="Brak kwoty - uzupełnij" readonly="true"
-                                           style="text-align: right; height: 19px;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
+                                           style="text-align: right; height: 19px;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
                         </p:column>
                         <p:column headerText="inwestycja">
                             <p:outputPanel id="rowinwestycja">
@@ -454,10 +454,10 @@
                             <p:inputText value="#{DokumentView.selectedSTR.stawka}" style="width: 30px;"/>
                         </p:column>
                         <p:column>
-                            <p:inputNumber value="#{DokumentView.selectedSTR.umorzeniepoczatkowe}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
+                            <p:inputNumber value="#{DokumentView.selectedSTR.umorzeniepoczatkowe}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
                         </p:column>
                         <p:column>
-                            <p:inputNumber value="#{DokumentView.selectedSTR.niepodlegaamortyzacji}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
+                            <p:inputNumber value="#{DokumentView.selectedSTR.niepodlegaamortyzacji}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
                         </p:column>
                         <p:column>
                             <h:selectOneMenu value="#{DokumentView.selectedSTR.typ}" styleClass="ui-selectonemenu-label ui-inputfield ui-corner-all"
@@ -482,19 +482,19 @@
                     </p:column>
                     <p:column headerText="#{mgs.netto}" style="width: 20%;">
                         <p:inputNumber id="netto" value="#{item.netto}" 
-                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"> 
+                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"> 
                             <p:ajax event="change" listener="#{DokumentView.updatenetto(item)}" />
                         </p:inputNumber>
                     </p:column>
                     <p:column headerText="#{mgs.VAT}" style="width: 20%;">
                         <p:inputNumber id="vat" value="#{item.vat}" 
-                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"> 
+                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"> 
                             <p:ajax event="change" listener="#{DokumentView.updatevat(item)}" />
                         </p:inputNumber>
                     </p:column>
                     <p:column headerText="brutto" style="width: 20%;">
                         <p:inputNumber id="brutto" value="#{item.brutto}" 
-                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
+                                       symbol="#{item.ewidencja.niemcy?' €':' zł'}" required="true" requiredMessage="Brak kwoty - uzupełnij" style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto"/> 
                     </p:column>
                      <p:column headerText="nie odliczaj" style="width: 20%;text-align: center">
                          <p:selectBooleanCheckbox value="#{item.nieduplikuj}"/>
