--- a/npkpir_23/web/wspolny/sub/bilanse/straty.xhtml
+++ b/npkpir_23/web/wspolny/sub/bilanse/straty.xhtml
@@ -26,7 +26,7 @@
                             <bcf:outputpl value="#{loop.kwota}"/>
                         </f:facet>
                         <f:facet name="input">  
-                    <p:inputNumber value="#{loop.kwota}" symbolPosition="s" decimalSeparator="."   inputStyle="text-align: right;" decimalPlaces="2" size="12" >
+                    <p:inputNumber value="#{loop.kwota}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" size="12" >
                                 <p:ajax event="change"  partialSubmit="true" global="false" update="@parent:@parent"/>
                             </p:inputNumber>
                         </f:facet>
