--- a/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_stworz_niemiecka.xhtml
@@ -56,7 +56,7 @@
                         </p:column>
                         <p:column headerText="#{fakturaView.selected.liczodwartoscibrutto ? 'cena jedn.brutto' : 'cena jedn.netto'}" width="120" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
                             <p:inputNumber id="cena" value="#{row.cena}" required="true" styleClass="kwotarozrachunku" size="13"
-                                            requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s" decimalSeparator="."   
+                                            requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s"    
                                             thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000"/> 
                         </p:column>
                         <p:column headerText="stawka VAT" width="70" style="text-align: center;">
@@ -123,7 +123,7 @@
                         </p:column>
                         <p:column headerText="#{fakturaView.selected.liczodwartoscibrutto ? 'cena jedn.brutto' : 'cena jedn.netto'}" width="90" style="text-align: center;" rendered="#{!fakturaView.fakturaxxl}">
                             <p:inputNumber id="cenak" value="#{row.cena}" required="true" styleClass="kwotarozrachunku" size="13"
-                                            requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s" decimalSeparator="."   
+                                            requiredMessage="Brak kwoty - uzupełnij" symbolPosition="s"    
                                              thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000"/> 
                         </p:column>
                         <p:column headerText="stawka VAT" width="70">
