--- a/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
+++ b/npkpir_23/web/wspolny/sub/fakturarozrach/faktura_rozrach_analiza.xhtml
@@ -222,7 +222,7 @@
                         </f:facet>
                         <f:facet name="input">  
                             <p:inputNumber value="#{item.kwota}" required="true" styleClass="kwotarozrachunku" size="9"
-                                    symbolPosition="s" decimalSeparator="."  
+                                    symbolPosition="s"   
                                     thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000"/> 
                         </f:facet>
                     </p:cellEditor>
@@ -237,7 +237,7 @@
                         </f:facet>
                         <f:facet name="input">  
                             <p:inputNumber value="#{item.kwota}" required="true" styleClass="kwotarozrachunku" size="9"
-                                    symbolPosition="s" decimalSeparator="."  
+                                    symbolPosition="s"   
                                     thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="2" minValue="-1000000"/> 
                         </f:facet>
                     </p:cellEditor>
@@ -270,7 +270,7 @@
                         </f:facet>
                         <f:facet name="input">  
                             <p:inputNumber value="#{item.kurs}" required="true" styleClass="kwotarozrachunku" size="9"
-                                    symbolPosition="s" decimalSeparator="."  
+                                    symbolPosition="s"   
                                     thousandSeparator="&#160;" inputStyle="text-align: right;" decimalPlaces="4" minValue="-1000000"/> 
                         </f:facet>
                     </p:cellEditor>
