--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_stronawiersza.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_cecha_stronawiersza.xhtml
@@ -13,8 +13,8 @@
         <p:ajax event="open" listener="#{dokfkView.wybierzcechankup}" update="formCHW:tablicacech" oncomplete="r('formCHW:tablicacech_data').find('td')[0].click();"/>
         <h:form id="formCHW" >
             <p:dataTable lazy="false"   value="#{dokfkView.pobranecechypodatnik}" var="item" rows="6" style="height: 270px;" id="tablicacech"
-                          emptyMessage="cechy nie zostały zdefiniowane" selection="#{dokfkView.cechazapisudododania}" 
-                          rowKey="#{item}" styleClass="walkingtable" rowIndexVar="index">
+                         emptyMessage="cechy nie zostały zdefiniowane" selection="#{dokfkView.cechazapisudododania}" selectionMode="single"
+                         rowKey="#{item.id}" styleClass="walkingtable" rowIndexVar="index">
                 <p:column width="10" styleClass="lpwiersza" style="text-align: center;">
                     <h:outputText value="#{index+1}"/>
                 </p:column>
