--- a/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_dodawanie.xhtml
+++ b/npkpir_23/web/wspolny/sub/dialogi/dialog_srodkitrwale_dodawanie.xhtml
@@ -80,17 +80,17 @@
                     <p:column>
                         <p:inputNumber id="cenazakupu" value="#{sTRTabView.selectedSTR.netto}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" 
                                         onblur="zweryfikujczyniebrakujesrodektrw('formdialogsrodki');"
-                                        style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                        style="text-align: right;" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="kwota umorzenia"/>
                     <p:column>
                         <p:inputNumber id="umorzenie" value="#{sTRTabView.selectedSTR.umorzeniepoczatkowe}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" 
-                                        style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                        style="text-align: right;" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="niepodlega umorzeniu"/>
                     <p:column>
                         <p:inputNumber id="umorzenie2" value="#{sTRTabView.selectedSTR.niepodlegaamortyzacji}" symbol=" zł" required="true" requiredMessage="Brak kwoty - uzupełnij" 
-                                        style="text-align: right;" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
+                                        style="text-align: right;" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2"  styleClass="wiersznetto"/> 
                     </p:column>
                     <h:outputText value="środek trw/wyposazenie"/>
                     <p:column>
