--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe.xhtml
@@ -43,7 +43,7 @@
             </p:panelGrid>
             <p:panelGrid columns="9">
 <!--                <h:outputText value="Procent waloryzacji 100=100%"/>
-                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s"   maxValue="100">
+                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s" signPosition="p"   maxValue="100">
                     <p:ajax event="blur" partialSubmit="true" global="false"/>
                 </p:inputNumber>-->
                 <h:outputText value="Data wystawienia"/>
@@ -68,11 +68,11 @@
                 </p:selectBooleanCheckbox>
 <!--                <h:outputText value="filtruj wg wartości od-do"/>
                 <p:inputNumber  value="#{fakturaView.dolnylimit}" symbol=" zł" 
-                                style="width: 70px;" symbolPosition="s"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                style="width: 70px;" symbolPosition="s" signPosition="p"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" partialSubmit="true"/>
                 </p:inputNumber>
                 <p:inputNumber  value="#{fakturaView.gornylimit}" symbol=" zł" 
-                                         style="width: 70px;" symbolPosition="s"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                         style="width: 70px;" symbolPosition="s" signPosition="p"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" listener="#{fakturaView.filtrujfaktury2}" update="akordeon:formokresowe:dokumentyOkresowe"  partialSubmit="true"/>
                 </p:inputNumber>-->
             </p:panelGrid>
