--- a/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_3.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_okresowe_3.xhtml
@@ -43,7 +43,7 @@
             </p:panelGrid>
             <p:panelGrid columns="9" >
 <!--                <h:outputText value="Procent waloryzacji 100=100%"/>
-                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s"   maxValue="100">
+                <p:inputNumber  id="kwotawaloryzacji" value="#{fakturaView.waloryzajca}"  decimalPlaces="2"  inputStyle="text-align: right;" symbol=" %" symbolPosition="s" signPosition="p"   maxValue="100">
                     <p:ajax event="blur" partialSubmit="true" global="false"/>
                 </p:inputNumber>-->
                 <h:outputText value="Data wystawienia"/>
@@ -62,11 +62,11 @@
                 </p:selectOneMenu>
                 <h:outputText value="filtruj wg wartości od-do"/>
                 <p:inputNumber  value="#{fakturaView.dolnylimit}" symbol=" zł" 
-                                style="width: 70px;" symbolPosition="s"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                style="width: 70px;" symbolPosition="s" signPosition="p"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" partialSubmit="true"/>
                 </p:inputNumber>
                 <p:inputNumber  value="#{fakturaView.gornylimit}" symbol=" zł" 
-                                         style="width: 70px;" symbolPosition="s"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
+                                         style="width: 70px;" symbolPosition="s" signPosition="p"   thousandSeparator="&#160;"  inputStyle="text-align: right;" decimalPlaces="2" minValue="-10000000" styleClass="wiersznetto">
                     <p:ajax event ="blur" listener="#{fakturaView.filtrujfaktury2}" update="akordeon:formokresowe3:dokumentyOkresowe"  partialSubmit="true"/>
                 </p:inputNumber>
                 <p:commandButton value="pokaż otwarte" actionListener="#{fakturaView.pokazotwarte}" global="false" style="width: 120px; margin-left: 10px;"  update="akordeon:formokresowe3:dokumentyOkresowe"/>
@@ -102,17 +102,17 @@
                     <h:outputText value=" #{wpis.dokument.walutafaktury}" rendered="#{wpis.dokument.walutafaktury ne 'PLN'}"/>
                 </p:column>
 <!--                <p:column headerText="kwota r.n." width="80" filterBy="#{wpis.kwotaroknastepny}" sortBy="#{wpis.kwotaroknastepny}" >  
-                    <p:inputNumber value="#{wpis.kwotaroknastepny}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" size="11" >
+                    <p:inputNumber value="#{wpis.kwotaroknastepny}" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2" size="11" >
                         <p:ajax event="change"  partialSubmit="true" global="false" listener="#{fakturaView.edytujokresowa(wpis)}"/>
                     </p:inputNumber>
                 </p:column>-->
                  <p:column headerText="praca" width="80" filterBy="#{wpis.kwotapraca}" sortBy="#{wpis.kwotapraca}" >  
-                     <p:inputNumber value="#{wpis.kwotapraca}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" size="8" rendered="#{wpis.kwotapraca gt 0}" >
+                     <p:inputNumber value="#{wpis.kwotapraca}" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2" size="8" rendered="#{wpis.kwotapraca gt 0}" >
                         <p:ajax event="change"  partialSubmit="true" global="false" listener="#{fakturaView.edytujokresowa(wpis)}"/>
                     </p:inputNumber>
                 </p:column>
                 <p:column headerText="zlecenie" width="80" filterBy="#{wpis.kwotazlecenie}" sortBy="#{wpis.kwotazlecenie}" >  
-                    <p:inputNumber value="#{wpis.kwotazlecenie}" symbolPosition="s"    inputStyle="text-align: right;" decimalPlaces="2" size="8" rendered="#{wpis.kwotazlecenie gt 0}">
+                    <p:inputNumber value="#{wpis.kwotazlecenie}" symbolPosition="s" signPosition="p"    inputStyle="text-align: right;" decimalPlaces="2" size="8" rendered="#{wpis.kwotazlecenie gt 0}">
                         <p:ajax event="change"  partialSubmit="true" global="false" listener="#{fakturaView.edytujokresowa(wpis)}"/>
                     </p:inputNumber>
                 </p:column>
