--- a/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
+++ b/npkpir_23/web/ksiegowa/sub/layoutZmianapodatnika/south.xhtml
@@ -8,7 +8,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:pe="http://primefaces.org/ui/extensions">
 
-    <pe:layoutPane position="south" size="50" closable="true" styleClassContent="southpane">
+    <pe:layoutPane position="south"  closable="true" styleClassContent="southpane">
         <h:form id="form_southpane" class="form_southpane">
             <p:panelGrid columns="2">
                 <h:outputText value="#{WpisView.podatnikObiekt.printnazwa}" style="font-weight: 900; font-size: xx-large"/>
